--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -19,7 +19,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Nyheter</a>
@@ -37,7 +37,7 @@
                     </div>
                 </li> --}}
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Service</a>
+                    <a href="/service" class="nav-link">Service</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">Tillbehör</a>
@@ -55,7 +55,9 @@
             </form>
         </div>
     </nav>
-    {{{body}}}
+    <main>
+        {{{body}}}
+    </main>
 </body>
 
 </html>
