fixed login, and smaller details on the dashboard and routers

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,14 +1,14 @@
 <section class="jumbotron text-center">
     <div class="container">
         <h1 class="jumbotron-heading">Hammarö elektronikservice</h1>
-        <p class="lead text-muted">Hammarö Elektronikservice AB
+        <p class="lead">Hammarö Elektronikservice AB
             Vi har funnits på marknaden sedan 1991, och har lång och djup erfarenhet av service på många olika
             förekommande butikssystem, vilket är en trygghet för dig som kund. Vi löser det mesta i serviceväg på
             datasystem inom livsmedelshandeln. Kontakta oss gärna för offert gällande just din utrustning.
 
             Detta kan vi hjälpa dig med
             Vi utför service på:</p>
-            <ul class="lead text-muted" style="list-style: none;">
+            <ul class="lead" style="list-style: none;">
                 <li>Kassasystem</li>
                 <li>Kassadiskar</li>
                 <li>Entrésystem</li>
