fixed db and some of the ui and uri things

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -53,7 +53,7 @@
                     <a href="#" class="nav-link">Referenser</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Disabled</a>
+                    <a class="nav-link" href="/staff">Personal</a>
                 </li>
                 {{#if isLoggedIn}}
                     <li class="nav-item">
