--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -1,23 +1,35 @@
   
 <div class="container-fluid" id="admin-container">
     <div class="row">
-        <div class="col-sm-6">
+        <div class="col-sm-4">
             <div class="card">
                 <div class="card-header">Hantera nyheter</div>
                 <div class="card-body">
                     <p class="card-text">Här kan du hantera nyheter genom att skapa nya, uppdatera eller radera redan existerande</p>
-                    <a href="/news/create" class="btn btn-success">Skapa</a>
+                    <a href="/news/add" class="btn btn-success">Skapa</a>
                     <a href="/dashboard/news/manage" class="btn btn-info">Hantera Nyheter</a>
                 </div>
             </div>
         </div>
-        <div class="col-sm-6">
+        <br>
+        <div class="col-sm-4">
             <div class="card">
                 <div class="card-header">Hantera Personal</div>
                 <div class="card-body">
                     <p class="card-text">Här kan du hantera personal profiler som kommer att visas under persoanal sidan</p>
-                    <a href="/portfolio/create" class="btn btn-success">Skapa</a>
-                    <a href="/admin/manage/projects" class="btn btn-info">Hantera Personal</a>
+                    <a href="/staff/add" class="btn btn-success">Skapa</a>
+                    <a href="/dashboard/manage/staff" class="btn btn-info">Hantera Personal</a>
+                </div>
+            </div>
+        </div>
+        <br>
+        <div class="col-sm-4">
+            <div class="card">
+                <div class="card-header">Hantera Tjänster</div>
+                <div class="card-body">
+                    <p class="card-text">Här kan du hantera tjänster som kommer att visas under Tjänst sidan</p>
+                    <a href="/service/add" class="btn btn-success">Skapa</a>
+                    <a href="/dashboard/manage/services" class="btn btn-info">Hantera Tjänster</a>
                 </div>
             </div>
         </div>
