Added crud for news, staff and services

--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -7,7 +7,7 @@
                 <div class="card-body">
                     <p class="card-text">Här kan du hantera nyheter genom att skapa nya, uppdatera eller radera redan existerande</p>
                     <a href="/news/add" class="btn btn-success">Skapa</a>
-                    <a href="/dashboard/news/manage" class="btn btn-info">Hantera Nyheter</a>
+                    <a href="/news/manage" class="btn btn-info">Hantera Nyheter</a>
                 </div>
             </div>
         </div>
@@ -18,7 +18,7 @@
                 <div class="card-body">
                     <p class="card-text">Här kan du hantera personal profiler som kommer att visas under persoanal sidan</p>
                     <a href="/staff/add" class="btn btn-success">Skapa</a>
-                    <a href="/dashboard/manage/staff" class="btn btn-info">Hantera Personal</a>
+                    <a href="/staff/manage" class="btn btn-info">Hantera Personal</a>
                 </div>
             </div>
         </div>
@@ -29,7 +29,7 @@
                 <div class="card-body">
                     <p class="card-text">Här kan du hantera tjänster som kommer att visas under Tjänst sidan</p>
                     <a href="/service/add" class="btn btn-success">Skapa</a>
-                    <a href="/dashboard/manage/services" class="btn btn-info">Hantera Tjänster</a>
+                    <a href="/service/manage" class="btn btn-info">Hantera Tjänster</a>
                 </div>
             </div>
         </div>
