--- a/views/add-staff.hbs
+++ b/views/add-staff.hbs
@@ -1,7 +1,7 @@
 <main>
     <div class="jumbotron container" id="create-post-form">
-        <form class="form-createpost form" method="POST" action="/staff/add?_csrf={{csrfToken}}" enctype="multipart/form-data">
-            <h1 class="text-center">Add Staff Memeber</h1>
+        <form class="form-createpost form" method="POST" action="/staff/add" enctype="multipart/form-data">
+            <h1 class="text-center">Add Staff Memebear</h1>
             <br>
             <input type="hidden" name="_csrf" value="{{csrfToken}}" id="create-post-input-field">
             <div class="form-label-group">
@@ -9,15 +9,15 @@
             </div>
             <br>
             <div class="form-label-group">
-                <input name="lastName" type="text" class="form-control" placeholder="Efternamn" value="{{lastName}}" maxlength="100">
+                <input name="lastName" type="text" id="lastName" class="form-control" placeholder="Efternamn" value="{{lastName}}" maxlength="100">
             </div>
             <br>
             <div class="form-label-group">
-                <input name="profession" type="text" class="form-control" placeholder="Jobb Titel" value="{{profession}}" maxlength="100">
+                <input name="profession" type="text" id="profession" class="form-control" placeholder="Jobb Titel" value="{{profession}}" maxlength="100">
             </div>
             <br>
             <div class="form-label-group">
-                <input type="file" name="myFile" class="form-control" accept=".jpg .png">
+                <input type="file" name="myFile" class="form-control" accept=".jpg">
             </div>
             <br>
             <button class="btn btn-lg btn-primary btn-block" type="submit" id="create-post-submitbutton">Post</button>
