new changes to development

--- a/views/news.hbs
+++ b/views/news.hbs
@@ -28,11 +28,11 @@
                             <div class="card-body">
                                 <h2 class="card-title text-center">{{title}}</h2>
                                 <img class="mx-auto d-block mb-3" style="width: 100%" src="{{imageLink}}" alt="">
-                                <p class="card-text preview-text font-weight-light">{{description}}</p>
+                                <p class="card-text preview-text font-weight-light">{{content}}</p>
                                 <a href="/blog/post/{{id}}" class="btn btn-primary">Read More →</a>
                             </div>
                             <div class="card-footer text-muted">
-                            Posted on {{newsDate}} by Emil Persson
+                            Posted on {{date}} by Emil Persson
                             </div>
                         </div>
                     {{/each}}
