--- a/views/staff.hbs
+++ b/views/staff.hbs
@@ -6,7 +6,7 @@
         {{#each staffList}}
         <div class="row col d-flex justify-content-center">
             <div class="card col-md-3" style="width: 18rem;">
-                <img class="card-img-top" src="../routers/upload/staff/{{imageLink}}" alt="Card image cap">
+                <img class="card-img-top" src="/routers/upload/staff/{{imageLink}}" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">{{firstName}} {{lastName}}</h5>
                     <p class="card-text">{{profession}}</p>
