fixed language problems

--- a/views/add-news.hbs
+++ b/views/add-news.hbs
@@ -1,7 +1,7 @@
 <main>
     <div class="jumbotron container" id="create-post-form">
         <form class="form-createpost form" method="POST" action="/news/add" enctype="multipart/form-data">
-            <h1 class="text-center">Add News</h1>
+            <h1 class="text-center">Lägg till Nyheter</h1>
             <br>
             <input type="hidden" name="_csrf" value="{{csrfToken}}" id="create-post-input-field">
             <div class="form-label-group">
