--- a/views/edit-service.hbs
+++ b/views/edit-service.hbs
@@ -1,7 +1,7 @@
 <main>
     <div class="jumbotron container" id="create-post-form">
         <form class="form-createpost form" method="POST" action="/service/update/{{serviceObject.id}}">
-            <h1 class="text-center">Edit blogpost</h1>
+            <h1 class="text-center">Uppdatera Tjänster</h1>
             <div class="text-center mb-4">
                 {{#if validationErrors.length}}
                 <p>Errors:</p>
