new bug fixes with uploading and viewing

--- a/views/add-service.hbs
+++ b/views/add-service.hbs
@@ -1,6 +1,6 @@
 <main>
     <div class="jumbotron container" id="create-post-form">
-        <form class="form-createpost form" method="POST" action="/service/add" enctype="multipart/form-data">
+        <form class="form-createpost form" method="POST" action="/service/add">
             <h1 class="text-center">Lägg till Tjänst</h1>
             <br>
             <input type="hidden" name="_csrf" value="{{csrfToken}}" id="create-post-input-field">
