--- a/views/edit-service.hbs
+++ b/views/edit-service.hbs
@@ -15,11 +15,11 @@
             <input type="hidden" name="_csrf" value="{{csrfToken}}">
             <div class="form-label-group">
                 <input name="title" type="text" id="create-post-input-field" class="form-control"
-                    placeholder="Blogpost Header" value="{{serviceObject.title}}">
+                    placeholder="Titel" value="{{serviceObject.title}}">
             </div>
             <div class="form-label-group">
                 <input name="description" type="text" id="create-post-input-field" class="form-control"
-                    placeholder="Blogpost Header" value="{{serviceObject.description}}">
+                    placeholder="Beskrivning" value="{{serviceObject.description}}">
             </div>
             <button class="btn btn-lg btn-primary btn-block" type="submit" id="create-post-submitbutton">Updatera</button>
         </form>
