--- a/views/add-staff.hbs
+++ b/views/add-staff.hbs
@@ -1,6 +1,6 @@
 <main>
     <div class="jumbotron container" id="create-post-form">
-        <form class="form-createpost form" method="POST" action="/staff/add" enctype="multipart/form-data">
+        <form class="form-createpost form" method="POST" action="/staff/add">
             <h1 class="text-center">Lägg till Personal</h1>
             <br>
             <input type="hidden" name="_csrf" value="{{csrfToken}}" id="create-post-input-field">
