--- a/views/edit-staff.hbs
+++ b/views/edit-staff.hbs
@@ -15,15 +15,15 @@
             <input type="hidden" name="_csrf" value="{{csrfToken}}">
             <div class="form-label-group">
                 <input name="firstName" type="text" id="firstName create-post-input-field" class="form-control"
-                    placeholder="Blogpost Header" value="{{staffObject.firstName}}">
+                    placeholder="Förnamn" value="{{staffObject.firstName}}">
             </div>
             <div class="form-label-group">
                 <input name="lastName" type="text" id="lastName create-post-input-field" class="form-control"
-                    placeholder="Blogpost Header" value="{{staffObject.lastName}}">
+                    placeholder="Efternamn" value="{{staffObject.lastName}}">
             </div>
             <div class="form-label-group">
                 <input name="profession" type="text" id="profession create-post-input-field" class="form-control"
-                    placeholder="Blogpost Header" value="{{staffObject.profession}}">
+                    placeholder="Jobbtitel" value="{{staffObject.profession}}">
             </div>
             <button class="btn btn-lg btn-primary btn-block" type="submit" id="create-post-submitbutton">Update</button>
         </form>
