mail service is not working as intended

--- a/views/error-report.hbs
+++ b/views/error-report.hbs
@@ -6,8 +6,13 @@
             <h3 class="text-center">Företagets namn</h3>
             <input type="hidden" name="_csrf" value="{{csrfToken}}">
             <div class="form-label-group">
-                <input name="businessName" type="text" class="form-control" placeholder="Företagets namn"
-                    value="{{businessName}}" maxlength="200">
+                <input name="companyName" type="text" class="form-control" placeholder="Företagets namn"
+                    value="{{companyName}}" maxlength="200">
+            </div>
+            <br>
+            <h3 class="text-center">Kontakt Email</h3>
+            <div class="form-label-group">
+                <input name="contactEmail" type="text" class="form-control" placeholder="Vilken email kan vi nå er på?" value="{{contactEmail}}" maxlength="320">
             </div>
             <br>
             <h3 class="text-center">Namn</h3>
